--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
@@ -24,7 +24,7 @@
                 а не по пролазној и променљивој "мудрости овога света". (Упореди I Кор. 3,19) Нека
                 Господ нашим свештеницима и свима који га траже, подари разума и снаге, да написано
                 буде корисно душама нашим.</p>
-            @Html.Partial("_Svestenici")
+            <center>@Html.Partial("_Svestenici")</center>
         </div>
         <!-- /uvod, slike otaca-->
     </div>
