--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/_Svestenici.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/_Svestenici.cshtml
@@ -1,42 +1,59 @@
-﻿<ul class="thumbnails" style="text-align: center">
-    <li style="width:85px;">
-        <div class="thumbnail">
-            <a href="@Url.Action("OtacSrboljub", "Pastir")">
-                <img src="@Url.Content("~/content/images/Pastir/o_srboljub2.jpg")" alt="Прот. Србољуб Милетић">
-                <p>
-                    Прот. Србољуб Милетић</a></p>
-        </div>
-    </li>
-    <li style="width:85px;">
-        <div class="thumbnail">
-            <a href="@Url.Action("OtacLjubo", "Pastir")">
-                <img src="@Url.Content("~/content/images/Pastir/o_ljubo2.jpg")" alt="Прот. Љубо Милошевић">
-                <p>
-                    Прот. Љубо Милошевић</a></p>
-        </div>
-    </li>
-    <li style="width:85px;">
-        <div class="thumbnail">
-            <a href="@Url.Action("OtacDusan", "Pastir")">
-                <img src="@Url.Content("~/content/images/Pastir/o_dusan2.jpg")" alt="Прот. Душан Колунџић">
-                <p>
-                    Прот. Душан Колунџић</a></p>
-        </div>
-    </li>
-    <li style="width:85px;">
-        <div class="thumbnail">
-            <a href="@Url.Action("OtacRade", "Pastir")">
-                <img src="@Url.Content("~/content/images/Pastir/o_rade2.jpg")" alt="Прот. Раде Вимбиш">
-            <p>
-                Прот. <br />Раде Вимбиш</p>
-        </div>
-    </li>
-    <li style="width:85px;">
-        <div class="thumbnail">
-            <a href="@Url.Action("OtacIvan", "Pastir")">
-                <img src="@Url.Content("~/content/images/Pastir/o_Ivan2.jpg")" alt="Јереј Иван Делић">
-                <p>
-                    Јереј <br />Иван Делић</a></p>
-        </div>
-    </li>
-</ul>
+﻿<table border="0" style="text-align:center">
+    <tr>
+        <td style="width: 120px;">
+            <div class="thumbnail">
+                <a href="@Url.Action("OtacSrboljub", "Pastir")">
+                    <img src="@Url.Content("~/content/images/Pastir/o_srboljub2.jpg")" alt="Прот. Србољуб Милетић">
+                    <p>
+                        Прот. Србољуб Милетић
+                    </p>
+                </a>
+            </div>
+        </td>
+        <td style="width: 120px;">
+            <div class="thumbnail">
+                <a href="@Url.Action("OtacLjubo", "Pastir")">
+                    <img src="@Url.Content("~/content/images/Pastir/o_ljubo2.jpg")" alt="Прот. Љубо Милошевић">
+                    <p>
+                        Прот. Љубо Милошевић
+                    </p>
+                </a>
+            </div>
+        </td>
+        <td style="width: 120px;">
+            <div class="thumbnail">
+                <a href="@Url.Action("OtacDusan", "Pastir")">
+                    <img src="@Url.Content("~/content/images/Pastir/o_dusan2.jpg")" alt="Прот. Душан Колунџић">
+                    <p>
+                        Прот. Душан Колунџић
+                    </p>
+                </a>
+            </div>
+        </td>
+        <td style="width: 120px;">
+            <div class="thumbnail">
+                <a href="@Url.Action("OtacRade", "Pastir")">
+                    <img src="@Url.Content("~/content/images/Pastir/o_rade2.jpg")" alt="Прот. Раде Вимбиш">
+                    <p>
+                        Прот.
+                    <br />
+                        Раде Вимбиш
+                    </p>
+                </a>
+            </div>
+        </td>
+        <td style="width: 120px;">
+            <div class="thumbnail">
+                <a href="@Url.Action("OtacIvan", "Pastir")">
+                    <img src="@Url.Content("~/content/images/Pastir/o_Ivan2.jpg")" alt="Јереј Иван Делић">
+                    <p>
+                        Јереј
+                    <br />
+                        Иван Делић</a></p>
+            </div>
+        </td>
+    </tr>
+</table>
+
+
+
