--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Bordure.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Bordure.cshtml
@@ -13,7 +13,7 @@
             <li class="active">Византијске бордуре</li>
 
     </ul>
-
+<table>
 <tr> 
           <td height="479" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -123,3 +123,4 @@
             </table>
           </td>
         </tr>
+    </table>
