--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Bordure2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Bordure2.cshtml
@@ -13,6 +13,7 @@
             <li class="active">Византијске бордуре 2</li>
 
     </ul>
+<table>
 <tr> 
           <td height="299" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -83,3 +84,4 @@
             </table>
           </td>
         </tr>
+    </table>
