--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske.cshtml
@@ -11,7 +11,7 @@
             <li class="active">Фреске</li>
         </ul>
 
-
+<table>
 <tr> 
           <td height="44"> 
             <div align="center"><font face="Arial, Helvetica, sans-serif"></font></div>
@@ -218,3 +218,5 @@
             </table>
           </td>
         </tr>
+
+    </table>
