--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Kraljeva.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Kraljeva.cshtml
@@ -15,6 +15,8 @@
     </ul>
 
 
+<table>
+
         <tr> 
           <td height="740" valign="top"> 
             <table width="96%" border="0" cellpadding="0" cellspacing="0">
@@ -193,3 +195,4 @@
           <td height="20"></td>
           <td></td>
         </tr>
+    </table>
