--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat02.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat02.cshtml
@@ -15,6 +15,8 @@
 
     </ul>
 
+<table>
+
 <tr> 
           <td height="59" width="650"> 
             <div align="center"><font face="Arial, Helvetica, sans-serif"><b><font size="2">ЦИКЛУС 
@@ -65,7 +67,7 @@
                 <td valign="top" colspan="5" bgcolor="#E3DFA8" height="115"> 
                   <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Bogojavlljenje%20detalj%203.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Bogojavlljenje%20detalj%203.gif" width="82" height="113" border="0"></a></font></div>
                 </td>
-                <td valign="top" colspan="6" bgcolor="#E3DFA8" height="115"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Bogojavlljenje%20detalj%203.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Bogojavljenje%20detalj.gif" width="109" height="113" border="0"></a></td>
+                <td valign="top" colspan="6" bgcolor="#E3DFA8" height="115"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Bogojavljenje detalj.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Bogojavljenje%20detalj.gif" width="109" height="113" border="0"></a></td>
                 <td colspan="2" valign="top" bgcolor="#E3DFA8" height="115"> 
                   <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Bogojavljenje%20detalj2.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Bogojavljenje%20detalj2.gif" width="106" height="113" border="0"></a></font></div>
                 </td>
@@ -245,7 +247,7 @@
                   <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Pranje%20nogu.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Pranje%20nogu.gif" width="94" height="113" border="0"></a></font></div>
                 </td>
                 <td valign="top" colspan="8" bgcolor="#D6BEA7"> 
-                  <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Pranje%20nogu%20detalj.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Pranje%20nogu.gif" width="94" height="113" border="0"></a></font></div>
+                  <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Pranje%20nogu%20detalj.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Pranje nogu detalj.gif" width="94" height="113" border="0"></a></font></div>
                 </td>
                 <td valign="top" colspan="6" bgcolor="#D6BEA7"> 
                   <div align="center"><font face="Arial, Helvetica, sans-serif"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Pranje%20nogu%20detalj%202.jpg" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Pranje%20nogu%20detalj%202.gif" width="98" height="113" border="0"></a></font></div>
@@ -459,3 +461,4 @@
         <tr> 
           <td height="23" width="650"></td>
         </tr>
+    </table>
