--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat03.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat03.cshtml
@@ -17,6 +17,8 @@
     </ul>
 
 
+<table>
+
 <tr> 
           <td height="18" width="572"></td>
           <td width="12"></td>
@@ -52,12 +54,10 @@
                       <td height="30" valign="top" colspan="4" bgcolor="#E3E2CC"></td>
                     </tr>
                     <tr valign="middle"> 
-                      <td height="137" valign="top" colspan="2" bgcolor="#E3E2CC"> 
+                      <td height="137" valign="top" colspan="4" bgcolor="#E3E2CC"> 
                         <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Uspenje%20Presvete.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Uspenje%20Presvete.gif" width="179" height="113" border="0"></a></font></div>
                       </td>
-                      <td valign="top" colspan="2" bgcolor="#E3E2CC" height="137"> 
-                        <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Uspenje%20Presvete%20detalj%202.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Uspenje%20Presvete%20detalj%202.gif" width="82" height="113" border="0"></a></font></div>
-                      </td>
+
                     </tr>
                     <tr valign="top"> 
                       <td width="141" height="134" bgcolor="#E3E2CC"> 
@@ -70,7 +70,7 @@
                         <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Uspenje%20Presvete%20detalj%205.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Uspenje%20Presvete%20detalj%205.gif" width="82" height="113" border="0"></a></font></div>
                       </td>
                       <td width="149" bgcolor="#E3E2CC"> 
-                        <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Uspenje%20Presvete%20detalj%203.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Uspenje%20Presvete%20detalj%203.gif" width="82" height="113" border="0"></a></font></div>
+                        <div align="center"><font face="Arial, Helvetica, sans-serif" size="2"><a href="~/Content/images/Riznice/Freske/Protat/Images/Praznici/Uspenje%20Presvete%20detalj%202.JPG" target="_blank"><img src="~/Content/images/Riznice/Freske/Protat/Thumbnails/Praznici/Uspenje%20Presvete%20detalj%202.gif" width="82" height="113" border="0"></a></font></div>
                       </td>
                     </tr>
                     <tr valign="top"> 
@@ -153,3 +153,4 @@
           <td height="23"></td>
           <td></td>
         </tr>
+    </table>
