--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat04.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Protat04.cshtml
@@ -17,7 +17,7 @@
 
     </ul>
 
-
+<table>
  <tr> 
           <td height="18" colspan="4"></td>
           <td width="148"></td>
@@ -240,3 +240,4 @@
             </div>
           </td>
         </tr>
+    </table>
