--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone.cshtml
@@ -13,6 +13,9 @@
             <li>@Html.ActionLink("Ризнице", "Index", "Riznice")<span class="divider">/</span></li>
             <li class="active">Иконе</li>
         </ul>
+
+<table>
+
   <tr> 
           <td valign="top" height="323"> 
             <p align="center"> 
