--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC1.cshtml
@@ -14,6 +14,8 @@
             <li class="active">1. Исус Христос</li>
         </ul>
 
+<table>
+
 <tr> 
           <td height="418" valign="top"> 
             <table width="100%" border="0" height="337">
@@ -218,3 +220,4 @@
             </table>
           </td>
         </tr>
+    </table>
