--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikonice.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikonice.cshtml
@@ -14,6 +14,8 @@
     </ul>
 
 
+<table>
+
 <tr> 
           <td height="479" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -89,3 +91,4 @@
             </table>
           </td>
         </tr>
+    </table>
