--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Jevandjelja.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Jevandjelja.cshtml
@@ -12,6 +12,8 @@
 
     </ul>
 
+<table>
+
 <tr>
           <td height="54"></td>
         </tr>
@@ -194,3 +196,4 @@
             </table>
           </td>
         </tr>
+    </table>
