--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Tekstovi.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Tekstovi.cshtml
@@ -12,6 +12,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td valign="middle" height="537" bordercolor="#FFFFFF"><em>&quot;..Неописиво 
             Слово Очево из Тебе је, Богородице, постало описиво оваплотивши се. 
@@ -184,3 +186,4 @@
             <p align="center">&nbsp;</p>
           </td>
         </tr>
+    </table>
