--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Utvari.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Utvari.cshtml
@@ -12,6 +12,8 @@
 
     </ul>
 
+<table>
+
 <tr>
           <td height="54"></td>
         </tr>
@@ -586,3 +588,4 @@
         <tr> 
           <td></td>
         </tr>
+    </table>
