--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Duborez.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Duborez.cshtml
@@ -12,6 +12,7 @@
 
     </ul>
 
+<table>
  <tr> 
           <td valign="top"> 
             <table width="100%" border="0" height="401">
@@ -197,3 +198,4 @@
             </table>
           </td>
         </tr>
+    </table>
