--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Ohrid1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Freske_Ohrid1.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="479" valign="top"> 
             <table width="100%" border="0" height="431">
@@ -168,3 +170,4 @@
             <p align="center">&nbsp;</p>
           </td>
         </tr>
+    </table>
