--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/IkoneICXC2.cshtml
@@ -16,6 +16,8 @@
     </ul>
 
  
+<table>
+
         <tr> 
           <td height="411" valign="top"> 
             <table width="100%" border="0" height="302">
@@ -224,3 +226,4 @@
             </table>
           </td>
         </tr>
+    </table>
