--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Angela2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Angela2.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="468" valign="top"> 
             <table width="100%" border="0" height="356">
@@ -178,3 +180,4 @@
             </table>
           </td>
         </tr>
+    </table>
