--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice1.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="468" valign="top"> 
             <table width="100%" border="0" height="407">
@@ -204,3 +206,4 @@
             </table>
           </td>
         </tr>
+    </table>
