--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice2.cshtml
@@ -15,6 +15,8 @@
 
     </ul>
 
+<table>
+
 <tr> 
           <td height="419" valign="top"> 
             <table width="100%" border="0" height="377">
@@ -191,3 +193,4 @@
             </table>
           </td>
         </tr>
+    </table>
