--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice3.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice3.cshtml
@@ -15,6 +15,8 @@
 
     </ul>
 
+<table>
+
 <tr> 
           <td height="379" valign="top"> 
             <table width="100%" border="0" height="350">
@@ -170,3 +172,4 @@
             </table>
           </td>
         </tr>
+    </table>
