--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice4.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Bogorodice4.cshtml
@@ -16,6 +16,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="567" valign="top"> 
             <table width="100%" border="0" height="445">
@@ -241,3 +243,4 @@
             </table>
           </td>
         </tr>
+    </table>
