--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Praznika1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Ikone_Praznika1.cshtml
@@ -13,6 +13,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="288" valign="top"> 
             <table width="100%" border="0" height="287">
@@ -132,3 +134,4 @@
             </table>
           </td>
         </tr>
+    </table>
