--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Medaljoni.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Medaljoni.cshtml
@@ -14,6 +14,8 @@
     </ul>
 
 
+<table>
+
 <tr> 
           <td height="134" valign="top"> 
             <table width="100%" border="0" height="134">
@@ -58,3 +60,4 @@
             </table>
           </td>
         </tr>
+    </table>
