--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Odezde.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Odezde.cshtml
@@ -12,6 +12,8 @@
 
     </ul>
 
+<table>
+
  <tr>
           <td height="54"></td>
         </tr>
@@ -505,3 +507,4 @@
         <tr> 
           <td></td>
         </tr>
+    </table>
