--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Okviri.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Okviri.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
 <tr> 
           <td height="290" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -72,3 +74,4 @@
             </table>
           </td>
         </tr>
+    </table>
