--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Rukopisni1.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Rukopisni1.cshtml
@@ -13,6 +13,8 @@
 
     </ul>
 
+<table>
+
 <tr> 
           <td height="288" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -130,3 +132,4 @@
             </table>
           </td>
         </tr>
+    </table>
