--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Rukopisni2.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Rukopisni2.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="288" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -131,3 +133,4 @@
             </table>
           </td>
         </tr>
+    </table>
