--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Trake.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Trake.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="336" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -86,3 +88,4 @@
             </table>
           </td>
         </tr>
+    </table>
