--- a/Svetosavlje/Web/Svetosavlje/Views/Riznice/Viz_slova.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Riznice/Viz_slova.cshtml
@@ -14,6 +14,8 @@
 
     </ul>
 
+<table>
+
  <tr> 
           <td height="288" valign="top"> 
             <table width="100%" border="0" height="292">
@@ -78,3 +80,4 @@
             </table>
           </td>
         </tr>
+    </table>
