--- a/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
@@ -13,7 +13,11 @@
         border-bottom: solid 1px black;
         font-weight: bold;
     }
+    .searchHiglight {
+        background-color: yellow;
+    }
 </style>
+
 @Scripts.Render("~/bundles/julianCalendar")
 
 <script>
@@ -35,14 +39,18 @@
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
             <li class="active">Пролог</li>
         </ul>
-        <div style="margin: 0 auto; text-align: center; ">
+        <div style="margin: 0 auto; text-align: center;">
             <h1>Пролог</h1>
+            @using (Html.BeginForm("SearchResults", "Prolog"))
+            {
+
+                <div style="border-bottom-width: 1px; border-bottom-style: solid; margin: 10px; width: 500px; display: inline-block;">
+                    <span>Нађи: </span>@Html.TextBox("txtSearchKeyword")
+                    <input type="submit" value="Тражи" />
+                </div>
+            }
             @using (Html.BeginForm("Index", "Prolog"))
             {
-                <div style="border-bottom-width:1px; border-bottom-style:solid; margin:10px;width:500px;display: inline-block;">
-                    <span>Нађи: </span>@Html.TextBox("txtSearchKeyword") 
-                <input type="submit" value="Тражи" />
-                </div>
                 
                 <div id="datepicker-container" style="text-align: center;">
                     <div id="datepicker-center" style="display: inline-block; margin: 0 auto;">
@@ -67,9 +75,9 @@
             <b>
                 @i
                 .&nbsp;&nbsp;
-                @prolog.ImeSveca
+                @Html.Raw(prolog.ImeSveca)
             </b>
-            @prolog.ZitijaSveca
+            @Html.Raw(prolog.ZitijaSveca)
         </p>
     }
     <p>
